[gd_scene load_steps=3 format=3 uid="uid://dfadr36y47k0e"]

[ext_resource type="Script" path="res://scenes/objects/item_container.gd" id="1_eb04q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vuh7r"]

[node name="ItemContainer" type="StaticBody2D" groups=["Container"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_eb04q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vuh7r")

[node name="BaseSprite" type="Sprite2D" parent="."]

[node name="LidSprite" type="Sprite2D" parent="."]

[node name="SpawnPositions" type="Node2D" parent="."]
